Vector 2022: Fix selector for mw-content-container
The .vector-layout-grid class that we had used earlier
(Ia4ff931259be156e582fd3196daac945cc7f6f7a) to fix layout issues with
Vector 2022 was removed. See If93860d13fb3161c0b66f7ea9e3e1831b0a2fc1e

--- a/resources/css/ext.translate.special.translate.css
+++ b/resources/css/ext.translate.special.translate.css
@@ -181,6 +181,6 @@
 }
 
 /** Vector 2022 specific fix for CSS grid layouts. See: T313671 */
-.mw-special-Translate .vector-layout-grid .mw-content-container {
+.mw-special-Translate.skin-vector-2022 .mw-content-container {
 	overflow-x: auto;
 }
