--- a/resources/src/ext.translate.specialTranslationStash/index.css
+++ b/resources/src/ext.translate.specialTranslationStash/index.css
@@ -77,6 +77,6 @@ h1 {
 }
 
 /** Vector 2022 specific fix for CSS grid layouts. See: T313671 */
-.mw-special-TranslationStash .vector-layout-grid .mw-content-container {
+.mw-special-TranslationStash.skin-vector-2022 .mw-content-container {
 	overflow-x: auto;
 }
